--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -77,6 +77,7 @@ linux-2.6 (2.6.31~rc6-1~experimental.1) UNRELEASED; urgency=low
     CONFIG_KEXEC from being enabled
   * Specify a fallback PERF_COUNTER_INDEX_OFFSET for archs that
     don't define it
+  * [hppa] Disable CONFIG_AB3100_CORE, it fails to build
 
  -- maximilian attems <maks@debian.org>  Thu, 18 Jun 2009 23:50:56 +0200
 
