--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,7 +1,7 @@
 linux-2.6 (2.6.31~rc6-1~experimental.1) UNRELEASED; urgency=low
 
   * New upstream release.
-    - support for W83627DHG-P (closes: #535646).
+    - Support for W83627DHG-P (closes: #535646).
     - Restore MAC address and MTU change operations on Orinoco and others
       (Closes: #536455)
     - Remove incorrect ACPI blacklisting of ASUS P4B266 mainboards
@@ -14,6 +14,8 @@ linux-2.6 (2.6.31~rc6-1~experimental.1) UNRELEASED; urgency=low
       (Closes: #527517)	
     - IPv6: add "disable" module parameter support to ipv6.ko.
       (closes: #542470)
+    - IPv6: avoid wraparound for expired preferred lifetime
+      (Closes: #518710)	
 
   [ maximilian attems ]
   * [powerpc64] Enable modular RTC_DRV_PS3, PS3_VRAM.
