--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -16,6 +16,7 @@ linux-2.6 (2.6.31~rc6-1~experimental.1) UNRELEASED; urgency=low
       (closes: #542470)
     - IPv6: avoid wraparound for expired preferred lifetime
       (Closes: #518710)	
+    - Fixes lockups with older dual-CPU machines (Closes: #542551)
 
   [ maximilian attems ]
   * [powerpc64] Enable modular RTC_DRV_PS3, PS3_VRAM.
