--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -58,7 +58,9 @@ linux-2.6 (2.6.31~rc7-1~experimental.1) UNRELEASED; urgency=low
     thanks to Kalle Olavi Niemitalo <kon@iki.fi>
   * ib_ipath: remove firmware for QLogic IBA7220 and use
     request_firmware() to load it
-  * dvb-usb-af9005: remove firmware and disable
+  * dvb-usb-af9005: remove initialisation script derived from Windows
+    driver and use request_firmware() to extract it at run-time
+    (closes: #494119)
   * Add warning on upgrade to a new upstream version where the system
     appears to be missing necessary firmware files (closes: #541702)
   * qla1280: Release spinlock when requesting firmware (closes: #543244)
