--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -11,6 +11,9 @@ linux-2.6 (2.6.32-3) UNRELEASED; urgency=high
   
   [ Ben Hutchings ]
   * sfc: Apply changes from 2.6.33-rc1 adding support for SFC9000 family
+  * Add stable release 2.6.32.2:
+    - KVM: x86 emulator: limit instructions to 15 bytes (CVE-2009-4031)
+    - hfs: fix a potential buffer overflow (CVE-2009-4020)
 
  -- Martin Michlmayr <tbm@cyrius.com>  Fri, 18 Dec 2009 15:34:01 +0000
 
