--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -16,6 +16,8 @@ linux-2.6 (2.6.32-3) UNRELEASED; urgency=high
     - hfs: fix a potential buffer overflow (CVE-2009-4020)
   * ia64: Include <linux/personality.h> header in <asm/fcntl.h>; fixes
     FTBFS
+  * r8169: Allow RTL8168D v1 and v2 to be used without firmware files
+    (Closes: #561309)
 
  -- Martin Michlmayr <tbm@cyrius.com>  Fri, 18 Dec 2009 15:34:01 +0000
 
