--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -14,6 +14,7 @@ linux-2.6 (2.6.32-3) UNRELEASED; urgency=high
   * Add stable release 2.6.32.2:
     - KVM: x86 emulator: limit instructions to 15 bytes (CVE-2009-4031)
     - hfs: fix a potential buffer overflow (CVE-2009-4020)
+  * radeon: fix crtc vblank update for r600 (regression in 2.6.32.2)
   * ia64: Include <linux/personality.h> header in <asm/fcntl.h>; fixes
     FTBFS
   * r8169: Allow RTL8168D v1 and v2 to be used without firmware files
