--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -19,6 +19,7 @@ linux-2.6 (2.6.32-3) UNRELEASED; urgency=high
     FTBFS
   * r8169: Allow RTL8168D v1 and v2 to be used without firmware files
     (Closes: #561309)
+  * Enable vmxnet3 (VMware guest paravirt net driver) (Closes: #562046)
 
  -- Martin Michlmayr <tbm@cyrius.com>  Fri, 18 Dec 2009 15:34:01 +0000
 
