--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -3,12 +3,13 @@ linux-2.6 (2.6.32-3) UNRELEASED; urgency=high
   [ Martin Michlmayr ]
   * [armel/orion5x] Build MTD_CFI_AMDSTD into the kernel again since
     it's needed on the D-Link DNS-323 (thanks Manuel Roeder).
+    (Closes: #562205)
 
   [ dann frazier ]
   * Input: ALPS - add support for touchpads with 4-directional button
   * Input: ALPS - add interleaved protocol support (Dell E6x00 series)
     (Closes: #561589)
-  
+
   [ Ben Hutchings ]
   * sfc: Apply changes from 2.6.33-rc1 adding support for SFC9000 family
   * Add stable release 2.6.32.2:
