--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,6 @@
-linux-2.6 (2.6.32-3) UNRELEASED; urgency=high
+linux-2.6 (2.6.32-3) unstable; urgency=high
+  
+  * The "Not a Suitable Christmas Present" release
 
   [ Martin Michlmayr ]
   * [armel/orion5x] Build MTD_CFI_AMDSTD into the kernel again since
@@ -23,7 +25,7 @@ linux-2.6 (2.6.32-3) UNRELEASED; urgency=high
     (Closes: #561309)
   * Enable vmxnet3 (VMware guest paravirt net driver) (Closes: #562046)
 
- -- Martin Michlmayr <tbm@cyrius.com>  Fri, 18 Dec 2009 15:34:01 +0000
+ -- Ben Hutchings <ben@decadent.org.uk>  Thu, 24 Dec 2009 04:28:55 +0000
 
 linux-2.6 (2.6.32-2) unstable; urgency=high
 
