--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -4,6 +4,9 @@ linux-2.6 (2.6.32-4) UNRELEASED; urgency=low
   * Correct comments referring to dpkg --print-installation-architecture
     in maintainer scripts (Closes: #558077)
 
+  [ maximilian attems ]
+  * topconfig set CAN_EMS_USB.
+
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 29 Dec 2009 15:32:44 +0100
 
 linux-2.6 (2.6.32-3) unstable; urgency=high
