--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -5,7 +5,8 @@ linux-2.6 (2.6.32-4) UNRELEASED; urgency=low
     in maintainer scripts (Closes: #558077)
 
   [ maximilian attems ]
-  * topconfig set CAN_EMS_USB, BT_MRVL, BT_MRVL_SDIO, BE2ISCSI, SCSI_PMCRAID.
+  * topconfig set CAN_EMS_USB, BT_MRVL, BT_MRVL_SDIO, BE2ISCSI, SCSI_PMCRAID,
+    SCSI_BFA_FC.
 
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 29 Dec 2009 15:32:44 +0100
 
