--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -7,7 +7,7 @@ linux-2.6 (2.6.32-4) UNRELEASED; urgency=low
   [ maximilian attems ]
   * topconfig set CAN_EMS_USB, BT_MRVL, BT_MRVL_SDIO, BE2ISCSI, SCSI_PMCRAID,
     SCSI_BFA_FC, USB_GL860, USB_GSPCA_JEILINJ, I2C_SI4713, RADIO_SI4713,
-    RADIO_SI470X.
+    RADIO_SI470X, DVB_USB_FRIIO.
 
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 29 Dec 2009 15:32:44 +0100
 
