--- a/tgt/debian/changelog
+++ b/tgt/debian/changelog
@@ -1,3 +1,13 @@
+tgt (1:1.0.3-1) unstable; urgency=low
+
+  * New upstream release.
+  * Update Standards-Version to 3.8.4, no changes needed.
+  * Drop patches/tgtadm-usage-metasyntax.
+  * Add parallel build ability to debian/rules.
+  * Add watch file.
+
+ -- Frederik Schüler <fs@debian.org>  Mon, 29 Mar 2010 13:09:33 +0200
+
 tgt (1:1.0.0-2) unstable; urgency=low
 
   * Depend on sg3-utils. (Closes: #565168)
