--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -10,6 +10,9 @@ linux-2.6 (2.6.33-1~experimental.5) UNRELEASED; urgency=low
   * [x86] Enable ramzswap driver (Closes: #573912)
   * [x86] Re-enable rt2860sta and rt2870sta drivers which were accidentally
     disabled when moving to Linux 2.6.33 (Closes: #576723)
+  * Add stable 2.6.33.3:
+    - ACPI: EC: Allow multibyte access to EC; fixes temperature monitoring
+      on some Dell laptops (Closes: #563313)
 
   [ Aurelien Jarno ]
   * Add support for sh4 architecture, patch by Nobuhiro Iwamatsu
