--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -2,6 +2,9 @@ linux-2.6 (2.6.34~rc6-1~experimental.1) UNRELEASED; urgency=low
 
   * New upstream release
 
+  * topconfig enable IPV6_SIT_6RD, NETFILTER_XT_TARGET_CT, IP_VS_PROTO_SCTP,
+    NF_CONNTRACK_ZONES, CAN_PLX_PCI, TI_DAC7512.
+
  -- maximilian attems <maks@debian.org>  Wed, 05 May 2010 22:57:24 +0200
 
 linux-2.6 (2.6.33-1~experimental.5) experimental; urgency=low
