--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -2,8 +2,12 @@ linux-2.6 (2.6.34~rc6-1~experimental.1) UNRELEASED; urgency=low
 
   * New upstream release
 
+  [ maximilian attems ]
   * topconfig enable IPV6_SIT_6RD, NETFILTER_XT_TARGET_CT, IP_VS_PROTO_SCTP,
     NF_CONNTRACK_ZONES, CAN_PLX_PCI, TI_DAC7512.
+  
+  [ Ben Hutchings ]
+  * Prepare debconf templates for translation (Closes: #576758)
 
  -- maximilian attems <maks@debian.org>  Wed, 05 May 2010 22:57:24 +0200
 
