--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -9,6 +9,7 @@ linux-2.6 (2.6.34~rc6-1~experimental.1) UNRELEASED; urgency=low
   
   [ Ben Hutchings ]
   * Prepare debconf templates for translation (Closes: #576758)
+  * [x86] Enable r8187se driver, previously named rtl8187se
 
  -- maximilian attems <maks@debian.org>  Wed, 05 May 2010 22:57:24 +0200
 
