--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -6,7 +6,7 @@ linux-2.6 (2.6.34-1~experimental.1) UNRELEASED; urgency=low
   [ maximilian attems ]
   * topconfig enable IPV6_SIT_6RD, NETFILTER_XT_TARGET_CT, IP_VS_PROTO_SCTP,
     NF_CONNTRACK_ZONES, CAN_PLX_PCI, TI_DAC7512, SCSI_HPSA, PATA_TOSHIBA,
-    MACVTAP.
+    MACVTAP, CHELSIO_T4, IXGBEVF.
   
   [ Ben Hutchings ]
   * Prepare debconf templates for translation (Closes: #576758)
