--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -8,7 +8,7 @@ linux-2.6 (2.6.34-1~experimental.1) UNRELEASED; urgency=low
     NF_CONNTRACK_ZONES, CAN_PLX_PCI, TI_DAC7512, SCSI_HPSA, PATA_TOSHIBA,
     MACVTAP, CHELSIO_T4, IXGBEVF, QLCNIC, LIBERTAS_MESH, RT2800PCI_RT30XX,
     RT2800PCI_RT35XX, RT2800USB_RT30XX, RT2800USB_RT35XX, RT2800USB_UNKNOWN,
-    USB_NET_SMSC75XX, USB_SIERRA_NET.
+    USB_NET_SMSC75XX, USB_SIERRA_NET, VIDEO_CX18_ALSA.
   
   [ Ben Hutchings ]
   * Prepare debconf templates for translation (Closes: #576758)
