--- a/linux-kbuild-2.6/debian/changelog
+++ b/linux-kbuild-2.6/debian/changelog
@@ -1,3 +1,9 @@
+linux-kbuild-2.6 (2.6.34-1~experimental.1) UNRELEASED; urgency=low
+
+  * New upstream version
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Mon, 17 May 2010 03:26:43 +0100
+
 linux-kbuild-2.6 (2.6.32-1) unstable; urgency=low
 
   [ Ben Hutchings ]
