--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -16,6 +16,10 @@ linux-2.6 (2.6.34-1~experimental.1) UNRELEASED; urgency=low
   * Prepare debconf templates for translation (Closes: #576758)
   * [x86] Enable r8187se driver, previously named rtl8187se
 
+  [ Aurelien Jarno ]
+  * mips/swarm: fix boot from IDE based media (Sebastian Andrzej Siewior)
+    (closes: #466977).
+
  -- maximilian attems <maks@debian.org>  Wed, 05 May 2010 22:57:24 +0200
 
 linux-2.6 (2.6.33-1~experimental.5) experimental; urgency=low
