--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -12,7 +12,7 @@ linux-2.6 (2.6.34-1~experimental.1) UNRELEASED; urgency=low
     RT2800PCI_RT35XX, RT2800USB_RT30XX, RT2800USB_RT35XX, RT2800USB_UNKNOWN,
     USB_NET_SMSC75XX, USB_SIERRA_NET, VIDEO_CX18_ALSA, USB_GSPCA_BENQ,
     USB_GSPCA_CPIA1, USB_GSPCA_OV534_9, USB_GSPCA_SN9C2028, RADIO_TEF6862,
-    RADIO_SAA7706H, SND_USB_UA101, CEPH_FS.
+    RADIO_SAA7706H, SND_USB_UA101, CEPH_FS, MICREL_PHY.
   
   [ Ben Hutchings ]
   * Prepare debconf templates for translation (Closes: #576758)
