--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -14,7 +14,8 @@ linux-2.6 (2.6.34-1~experimental.1) UNRELEASED; urgency=low
     USB_GSPCA_CPIA1, USB_GSPCA_OV534_9, USB_GSPCA_SN9C2028, RADIO_TEF6862,
     RADIO_SAA7706H, SND_USB_UA101, CEPH_FS, MICREL_PHY, KSZ884X_PCI,
     SENSORS_ADT7411, SENSORS_ASC7621, VIDEO_TLG2300, DVB_USB_AZ6027,
-    DVB_NGENE.
+    DVB_NGENE, HID_3M_PCT, LOGIG940_FF, HID_MAGICMOUSE, HID_MOSART,
+    HID_NTRIG, HID_QUANTA, HID_STANTUM, HID_WACOM.
   
   [ Ben Hutchings ]
   * Prepare debconf templates for translation (Closes: #576758)
