--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -16,7 +16,7 @@ linux-2.6 (2.6.34-1~experimental.1) UNRELEASED; urgency=low
     SENSORS_ADT7411, SENSORS_ASC7621, VIDEO_TLG2300, DVB_USB_AZ6027,
     DVB_NGENE, HID_3M_PCT, LOGIG940_FF, HID_MAGICMOUSE, HID_MOSART,
     HID_NTRIG, HID_QUANTA, HID_STANTUM, HID_WACOM, USB_SERIAL_QCAUX,
-    USB_SERIAL_VIVOPAY_SERIAL, MMC_RICOH_MMC.
+    USB_SERIAL_VIVOPAY_SERIAL, MMC_RICOH_MMC, LEDS_DELL_NETBOOKS.
   
   [ Ben Hutchings ]
   * Prepare debconf templates for translation (Closes: #576758)
