--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -17,6 +17,7 @@ linux-2.6 (2.6.34-1~experimental.1) UNRELEASED; urgency=low
     HID_NTRIG, HID_QUANTA, HID_STANTUM, HID_WACOM, USB_SERIAL_QCAUX,
     USB_SERIAL_VIVOPAY_SERIAL, MMC_RICOH_MMC, LEDS_DELL_NETBOOKS, LOGFS.
   * [x86] Enable EEEPC_WMI.
+  * Fix backlight support on some recent Thinkpads.
   
   [ Ben Hutchings ]
   * Prepare debconf templates for translation (Closes: #576758)
