--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -19,6 +19,7 @@ linux-2.6 (2.6.34-1~experimental.1) UNRELEASED; urgency=low
   * [x86] Enable EEEPC_WMI.
   * Fix backlight support on some recent Thinkpads.
   * Enable autosuspend on UVC by default.
+  * acpi: Fall back to manually changing SCI_EN.
   
   [ Ben Hutchings ]
   * Prepare debconf templates for translation (Closes: #576758)
