--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -20,6 +20,7 @@ linux-2.6 (2.6.34-1~experimental.1) UNRELEASED; urgency=low
   * Fix backlight support on some recent Thinkpads.
   * Enable autosuspend on UVC by default.
   * acpi: Fall back to manually changing SCI_EN.
+  * Explicitly pass in whether sb is pinned or not.
   
   [ Ben Hutchings ]
   * Prepare debconf templates for translation (Closes: #576758)
