--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -18,6 +18,7 @@ linux-2.6 (2.6.34-1~experimental.1) UNRELEASED; urgency=low
     USB_SERIAL_VIVOPAY_SERIAL, MMC_RICOH_MMC, LEDS_DELL_NETBOOKS, LOGFS.
   * [x86] Enable EEEPC_WMI.
   * Fix backlight support on some recent Thinkpads.
+  * usb: Allow drivers to enable USB autosuspend on a per-device basis.
   * Enable autosuspend on UVC by default.
   * acpi: Fall back to manually changing SCI_EN.
   * Explicitly pass in whether sb is pinned or not.
