--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -6,6 +6,7 @@ linux-2.6 (2.6.34-1~experimental.2) UNRELEASED; urgency=low
 
   [ maximilian attems ]
   * topconfig enable CFQ_GROUP_IOSCHED.
+  * [x86] Enable X86_PCC_CPUFREQ.
 
  -- Ben Hutchings <ben@decadent.org.uk>  Wed, 26 May 2010 02:55:03 +0100
 
