--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -3,6 +3,10 @@ linux-2.6 (2.6.34-1~experimental.2) UNRELEASED; urgency=low
   [ Ben Hutchings ]
   * [x86] Reenable rtl8192su, accidentally disabled in previous version
     (Closes: #580740)
+  * writeback: Update dirty flags in two steps
+  * writeback: ensure that WB_SYNC_NONE writeback with sb pinned is sync
+    (Closes: #582808)
+  * writeback: fix non-integrity write-back
 
   [ maximilian attems ]
   * topconfig enable CFQ_GROUP_IOSCHED, MFD_WM8994, REGULATOR_MAX8649,
