--- a/linux-2.6/debian/patches/series/1~experimental.2
+++ b/linux-2.6/debian/patches/series/1~experimental.2
@@ -1,1 +1,4 @@
 - debian/dfsg/drivers-staging-rtl8192su-disable.patch
++ bugfix/all/writeback-Update-dirty-flags-in-two-steps.patch
++ bugfix/all/writeback-ensure-WB_SYNC_NONE-writeback-with-sb-pinned-is-sync.patch
++ bugfix/all/writeback-fix-non-integrity-write-back.patch
