--- a/linux-2.6/debian/patches/series/1~experimental.2
+++ b/linux-2.6/debian/patches/series/1~experimental.2
@@ -2,3 +2,5 @@
 + bugfix/all/writeback-Update-dirty-flags-in-two-steps.patch
 + bugfix/all/writeback-ensure-WB_SYNC_NONE-writeback-with-sb-pinned-is-sync.patch
 + bugfix/all/writeback-fix-non-integrity-write-back.patch
++ features/all/RTC-rtc-cmos-Fix-binary-mode-support.patch
++ features/mips/MIPS-Loongson-Define-rtc-device-on-MC146818-systems.patch
