--- a/linux-2.6/debian/patches/series/1~experimental.2
+++ b/linux-2.6/debian/patches/series/1~experimental.2
@@ -4,3 +4,4 @@
 + bugfix/all/writeback-fix-non-integrity-write-back.patch
 + features/all/RTC-rtc-cmos-Fix-binary-mode-support.patch
 + features/mips/MIPS-Loongson-Define-rtc-device-on-MC146818-systems.patch
++ debian/revert-removal-of-r8192sU_HWImg-c.patch
