--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,3 +1,10 @@
+linux-2.6 (2.6.34-1~experimental.3) UNRELEASED; urgency=low
+
+  [ Ben Hutchings ]
+  * ipr: add writeq definition if needed (Closes: #584840)
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Wed, 09 Jun 2010 23:03:38 +0100
+
 linux-2.6 (2.6.34-1~experimental.2) experimental; urgency=low
 
   [ Ben Hutchings ]
