--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -2,6 +2,10 @@ linux-2.6 (2.6.34-1~experimental.3) UNRELEASED; urgency=low
 
   [ Ben Hutchings ]
   * ipr: add writeq definition if needed (Closes: #584840)
+  * [mips] Fix boot from ATA hard drives (Closes: #584784):
+    - Set io_map_base for several PCI bridges lacking it
+    - Replace per-platform built-in IDE drivers with libata-based drivers
+    - Enable BLK_DEV_SD as built-in on all platforms
 
  -- Ben Hutchings <ben@decadent.org.uk>  Wed, 09 Jun 2010 23:03:38 +0100
 
