--- a/linux-2.6/debian/patches/series/1~experimental.3
+++ b/linux-2.6/debian/patches/series/1~experimental.3
@@ -1,2 +1,6 @@
 + bugfix/all/ipr-add-writeq-definition-if-needed.patch
 + bugfix/mips/mips-Set-io_map_base-for-several-PCI-bridges-lacking.patch
++ bugfix/all/Staging-rtl8192s_usb-Fix-device-ID-table.patch
++ debian/rtl8192u_usb-Restore-lookup-tables.patch
++ debian/dfsg/rtl8192u_usb-Remove-code-for-using-built-in-firmware.patch
++ bugfix/all/Staging-rtl8192u_usb-Add-LG-device-ID-043e-7a01.patch
