--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,6 @@
-linux-2.6 (2.6.34-1~experimental.3) UNRELEASED; urgency=low
+linux-2.6 (2.6.35~rc3-1~experimental.1) UNRELEASED; urgency=low
+  
+  * New upstream snapshot
 
   [ Ben Hutchings ]
   * ipr: add writeq definition if needed (Closes: #584840)
