--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -42,6 +42,7 @@ linux-2.6 (2.6.35~rc4-1~experimental.1) UNRELEASED; urgency=low
   * Add linux-tools-<version> package containing the perf tool
     (Closes: #548715)
   * Enable SERIAL_USB_TI (Closes: #588096) and SERIAL_USB_WHITEHEAT
+  * [x86] Enable EDAC_I7CORE
 
   [ maximilian attems ]
   * Enable DRM_RADEON_KMS.
