--- a/tgt/debian/changelog
+++ b/tgt/debian/changelog
@@ -1,3 +1,9 @@
+tgt (1:1.0.4-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Frederik Schüler <fs@debian.org>  Wed, 05 May 2010 09:04:59 +0200
+
 tgt (1:1.0.3-2) unstable; urgency=low
 
   * Fix Format string vulnerability CVE-2010-0743.
