--- a/tgt/debian/changelog
+++ b/tgt/debian/changelog
@@ -1,3 +1,9 @@
+tgt (1:1.0.4-2) UNRELEASED; urgency=low
+
+  * Fix bashism in tgt-admin, thanks to Chris Cheney (Closes: #589716)
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Wed, 21 Jul 2010 02:04:46 +0100
+
 tgt (1:1.0.4-1) unstable; urgency=low
 
   * New upstream release.
