--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,6 +1,6 @@
 linux-2.6 (2.6.35-1~experimental.2) UNRELEASED; urgency=low
 
-  * images: Nuke modules.devname on removal.
+  * images: Nuke modules.devname on removal. (closes: #590607)
   * Add stable 2.6.35.1 and 2.6.35.2.
 
  -- maximilian attems <maks@debian.org>  Tue, 04 Aug 2010 20:21:16 +0200
