--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,3 +1,10 @@
+linux-2.6 (2.6.35-1~experimental.3) UNRELEASED; urgency=low
+
+  [ Ritesh Raj Sarraf ]
+  * Add .gnu_debuglink information into kernel modules (Closes: #555549)
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Wed, 18 Aug 2010 02:45:21 +0100
+
 linux-2.6 (2.6.35-1~experimental.2) experimental; urgency=low
 
   * images: Nuke modules.devname on removal. (closes: #590607)
