--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,3 +1,12 @@
+linux-2.6 (2.6.38~rc6-1~experimental.2) UNRELEASED; urgency=low
+
+  [ Ben Hutchings ]
+  * postinst: Remove specific support for running a ramdisk creator;
+    warn users that specify one in /etc/kernel-img.conf
+  * Require initramfs-tools >= 0.94, which installs a postinst hook
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Tue, 01 Mar 2011 05:38:48 +0000
+
 linux-2.6 (2.6.38~rc6-1~experimental.1) experimental; urgency=low
 
   [ Ben Hutchings ]
