--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (2.6.38~rc7-1~experimental.1) UNRELEASED; urgency=low
+linux-2.6 (2.6.38~rc7-1~experimental.1) experimental; urgency=low
 
   [ Ben Hutchings ]
   * postinst: Remove specific support for running a ramdisk creator;
@@ -9,7 +9,7 @@ linux-2.6 (2.6.38~rc7-1~experimental.1) UNRELEASED; urgency=low
   * New upstream release candidate
   * x86: Set DRM_I915_KMS on request by xorg team.
 
- -- Ben Hutchings <ben@decadent.org.uk>  Tue, 01 Mar 2011 05:38:48 +0000
+ -- maximilian attems <maks@debian.org>  Thu, 03 Mar 2011 16:00:38 +0100
 
 linux-2.6 (2.6.38~rc6-1~experimental.1) experimental; urgency=low
 
