--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (2.6.38~rc7-1~experimental.1) experimental; urgency=low
+linux-2.6 (2.6.38~rc7-1~experimental.1) UNRELEASED; urgency=low
 
   [ maximilian attems ]
   * New upstream release candidate
