--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -4,6 +4,9 @@ linux-2.6 (2.6.38~rc7-1~experimental.1) UNRELEASED; urgency=low
   * New upstream release candidate
   * x86: Set DRM_I915_KMS on request by xorg team.
 
+  [ Ben Hutchings ]
+  * [x86] Correct typos in label names in two asm functions (Closes: #616426)
+
  -- maximilian attems <maks@debian.org>  Thu, 03 Mar 2011 16:00:38 +0100
 
 linux-2.6 (2.6.38~rc6-1~experimental.1) experimental; urgency=low
