--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -14,6 +14,7 @@ linux-2.6 (2.6.38~rc7-1~experimental.1) UNRELEASED; urgency=low
   * aufs: Update for 2.6.38
   * aufs: Fix device numbers passed to security_path_mknod()
   * dib0700/dib7000m: Add pid filtering (Closes: #614837)
+  * [powerpc] Revert fb module changes (Closes: #614221)
 
  -- maximilian attems <maks@debian.org>  Thu, 03 Mar 2011 16:00:38 +0100
 
