--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -2,6 +2,9 @@ linux-2.6 (2.6.38~rc8-1~experimental.1) UNRELEASED; urgency=low
 
   * New upstream release candidate
 
+  [ Ben Hutchings ]
+  * [sparc] Fix .size directive for do_int_load
+
  -- Ben Hutchings <ben@decadent.org.uk>  Wed, 09 Mar 2011 01:10:58 +0000
 
 linux-2.6 (2.6.38~rc7-1~experimental.1) experimental; urgency=low
