--- a/firmware-free/debian/changelog
+++ b/firmware-free/debian/changelog
@@ -1,6 +1,6 @@
-firmware-free (3) UNRELEASED; urgency=low
+firmware-free (3~experimental) experimental; urgency=low
 
   * Initial release.  Replaces firmware-linux-free built from the
     linux-2.6 source package.
 
- -- Ben Hutchings <ben@decadent.org.uk>  Thu, 14 Jan 2010 23:06:31 +0000
+ -- Ben Hutchings <ben@decadent.org.uk>  Sat, 12 Mar 2011 05:08:41 +0000
