--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,3 +1,11 @@
+linux-2.6 (2.6.38~rc8-1~experimental.1) UNRELEASED; urgency=low
+
+  [ Ben Hutchings ]
+  * Move firmware-linux-free to separate source package (firmware-free)
+  * Move linux-base to separate source package
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Sat, 12 Mar 2011 08:57:58 +0000
+
 linux-2.6 (2.6.38~rc8-1~experimental.1) experimental; urgency=low
 
   * New upstream release candidate
