--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -3,6 +3,7 @@ linux-2.6 (2.6.38~rc8-1~experimental.1) UNRELEASED; urgency=low
   [ Ben Hutchings ]
   * Move firmware-linux-free to separate source package (firmware-free)
   * Move linux-base to separate source package
+  * net/can: Enable CAN_SLCAN as module (Closes: #617629)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sat, 12 Mar 2011 08:57:58 +0000
 
