--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -9,6 +9,11 @@ linux-2.6 (2.6.38~rc8-1~experimental.2) UNRELEASED; urgency=low
     - adfs,appletalk,i810,ufs,usbip: Refactor locking
     - hpfs: Disable HPFS_FS
 
+  [ Aurelien Jarno]
+  * mips/malta-[45]kc: 
+    - disable ATM, TR, WAN.
+    - synchronize options in malta-4kc and malta-5kc.
+
  -- Ben Hutchings <ben@decadent.org.uk>  Sat, 12 Mar 2011 08:57:58 +0000
 
 linux-2.6 (2.6.38~rc8-1~experimental.1) experimental; urgency=low
