--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,6 @@
-linux-2.6 (2.6.38~rc8-1~experimental.2) UNRELEASED; urgency=low
+linux-2.6 (2.6.38-1) UNRELEASED; urgency=low
+
+  * New upstream release: http://kernelnewbies.org/Linux_2_6_38
 
   [ Ben Hutchings ]
   * Move firmware-linux-free to separate source package (firmware-free)
