--- a/firmware-free/debian/changelog
+++ b/firmware-free/debian/changelog
@@ -1,3 +1,9 @@
+firmware-free (3) UNRELEASED; urgency=low
+
+  * Update to linux-support 2.6.38-1
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Wed, 16 Mar 2011 13:23:44 +0000
+
 firmware-free (3~experimental) experimental; urgency=low
 
   * Initial release.  Replaces firmware-linux-free built from the
