--- a/tgt/debian/changelog
+++ b/tgt/debian/changelog
@@ -1,8 +1,8 @@
-tgt (1:1.0.4-2squeeze1) stable-security; urgency=high
+tgt (1:1.0.4-3) unstable; urgency=high
 
   * iscsi: fix buffer overflow before login (CVE-2011-0001)
 
- -- Ben Hutchings <ben@decadent.org.uk>  Mon, 24 Jan 2011 20:21:11 +1000
+ -- Ben Hutchings <ben@decadent.org.uk>  Mon, 21 Mar 2011 03:32:59 +0000
 
 tgt (1:1.0.4-2) unstable; urgency=low
 
