--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,3 +1,9 @@
+linux-2.6 (2.6.39~rc6-1~experimental.2) experimental; urgency=low
+
+  * [x86] Enable ASUS_WMI and ASUS_NB_WMI. (closes: #626141)
+
+ -- maximilian attems <maks@debian.org>  Mon, 09 May 2011 11:53:05 +0200
+
 linux-2.6 (2.6.39~rc6-1~experimental.1) experimental; urgency=low
 
   * New upstream release candidate  
