--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,6 +1,7 @@
 linux-2.6 (2.6.39~rc6-1~experimental.2) experimental; urgency=low
 
-  * [x86] Enable ASUS_WMI and ASUS_NB_WMI. (closes: #626141)
+  * [x86] Enable modular ASUS_WMI and ASUS_NB_WMI. (closes: #626141)
+  * [x86] Enable modular DELL_WMI_AIO, HP_ACCEL, INTEL_IPS.
 
  -- maximilian attems <maks@debian.org>  Mon, 09 May 2011 11:53:05 +0200
 
