--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -3,7 +3,9 @@ linux-2.6 (2.6.39~rc6-1~experimental.2) experimental; urgency=low
   * [x86] Enable modular ASUS_WMI and ASUS_NB_WMI. (closes: #626141)
   * [x86] Enable modular DELL_WMI_AIO, HP_ACCEL, INTEL_IPS, ACPI_IPMI.
   * [x86/486] Enable modular XO1_RFKILL, XO15_EBOOK.
-  * topconfig: Enable modular NF_CONNTRACK_TIMESTAMP, NF_CONNTRACK_SNMP.
+  * topconfig: Enable modular NF_CONNTRACK_TIMESTAMP, NF_CONNTRACK_SNMP,
+    NETFILTER_XT_TARGET_AUDIT, NETFILTER_XT_MATCH_ADDRTYPE,
+    NETFILTER_XT_MATCH_DEVGROUP.
 
  -- maximilian attems <maks@debian.org>  Mon, 09 May 2011 11:53:05 +0200
 
